erDiagram
    BOT {
        TEXT bot_id PK
        TEXT bound_user_id FK
        TEXT display_name
    }

    DEBUG_SESSION {
        TEXT session_id PK
        TEXT bot_id FK
        TEXT session_name
        INTEGER started_at
        INTEGER ended_at
    }

    PROTOCOL_PACKET {
        TEXT packet_id PK
        TEXT bot_id FK
        TEXT protocol_type "Milky/OneBot"
        TEXT direction "send/receive"
        TEXT action_name
        TEXT file_path "原始JSON路径"
        TEXT related_object_type "message/group_request/group_event"
        TEXT related_object_id "对应实体ID, 非FK"
        INTEGER is_error
        TEXT session_id FK
        INTEGER created_at
    }

    AUDIT_EVENT {
        TEXT event_id PK
        TEXT event_type
        TEXT actor_user_id FK
        TEXT target_type
        TEXT target_id "多态引用"
        TEXT detail_json
        INTEGER created_at
    }

    APP_SETTING {
        TEXT setting_key PK
        TEXT setting_value
        TEXT value_type "string/int/bool/json"
    }

    BOT ||--o{ DEBUG_SESSION : "starts, 1:N"
    BOT ||--o{ PROTOCOL_PACKET : "interacts, 1:N"
    DEBUG_SESSION ||--o{ PROTOCOL_PACKET : "groups, 1:N"
